# appverse

./: .firebaserc  README.md  app.json  package.json  pnpm-lock.yaml
apps/ai-api/: .gitignore  Dockerfile  README.md  pyproject.toml  run.py
apps/ai-api/src/ai_api/: __init__.py  main.py
apps/ai-api/src/ai_api/models/: stt_models.py
apps/ai-api/src/ai_api/routers/: stt.py
apps/ai-api/src/ai_api/services/: whisper_service.py
apps/ai-api/tests/: test_stt.py
apps/anymin/: FIREBASE_SETUP.md  app.json  package.json  privacy-policy.html
apps/anymin/components/: Calendar.tsx  KakaoLoginWebView.tsx  NaverLoginWebView.tsx
apps/anymin/constants/: firebase.ts
apps/anymin/context/: AuthContext.tsx
apps/anymin/firebase/: config.ts
apps/anymin/services/: audioService.ts  firebaseDatabase.ts  kakaoAuth.ts  naverAuth.ts  sttService.ts
apps/chat-client/: app.json  package.json
apps/chat-client/components/: EmojiList.tsx
apps/chat-server/: package.json
apps/chat-server/src/: server.ts
apps/daily-lucky/: app.json  package.json
apps/daily-lucky/app/: +html.tsx  _layout.tsx  admin.tsx  draw.tsx  home.tsx  login.tsx  register.tsx
apps/daily-lucky/constants/: Colors.ts  admin.ts
apps/daily-lucky/context/: AuthContext.tsx
apps/everyone-bid/: app.json  package.json  tsconfig.json
apps/everyone-bid/app/: _layout.tsx  home.tsx  login.tsx  payment-method.tsx  payment-webview.tsx  product-upload.tsx  products.tsx  register.tsx  role-select.tsx
apps/everyone-bid/components/: ProductCard.tsx
apps/functions/: package.json  tsconfig.json
apps/local-auction-processor/: package.json
apps/local-storage-server/: package.json
(+26 files in other folders)
