[project]
name = "ai-api"
version = "0.1.0"
description = ""
authors = [
    {name = "JungJoonHo",email = "wnsgh6749@naver.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "ai_api", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
